# modlogc

./: CMakeLists.txt  Doxyfile
include/: ulogc.h
src/: logger.c  logger.h  lprintf.c
test/: LogTest.cpp  LogTest.hpp
